# test_game

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeListsExt.txt  README.md  main.cpp  run-format.sh
.github/workflows/: CI.yml
core/: application.cpp  application.h  drawable.h  event_handler.h  game.cpp  game.h  game_scene.cpp  game_scene.h  game_scene_renderer.cpp  game_scene_renderer.h  game_screen.cpp  game_screen.h  game_screen_manager.cpp  game_state.cpp  game_state.h  layer.h  logger.cpp  logger.h  sdl_types.h  sdl_types_factory.cpp
core/game_scenes/: level_game_scene.cpp  level_game_scene.h  sample_game_scene.cpp  sample_game_scene.h
core/game_screens/: sample_game_screen.cpp  sample_game_screen.h
core/game_states/: level_game_state.cpp  sample_game_state.cpp  sample_game_state.h
core/gameplay/: a_start.cpp  a_start.h  cell.cpp  cell.h  cell_field.cpp  cell_field.h  tile.cpp  tile.h  tile_field.h  unit.h
math/: vec2.cpp  vec2.h
resources/: test_game.sh
resources/images/: .gitattributes
src/: main.cpp
src/algorithm/: a_start.cpp  a_start.h
src/container/: sparse_map.h
src/core/: drawable.h  event_handler.h  event_loop.cpp  event_loop.h  game.cpp  game.h  game_scene.h  game_scene_renderer.cpp  game_scene_renderer.h  game_screen.cpp  game_screen.h  game_screen_manager.cpp  game_screen_manager.h  game_state.h  layer.cpp  logger.cpp  logger.h  sdl_types.h  sdl_types_factory.cpp  sdl_types_factory.h  texture_manager.cpp  texture_manager.h
src/core/a_star/: a_start.cpp  a_start.h  node.cpp  node.h
src/core/game_scenes/: game_over_game_scene.cpp  game_over_game_scene.h  level_game_scene.cpp  level_game_scene.h
src/core/game_screens/: game_over_game_screen.cpp  game_over_game_screen.h  level_game_screen.cpp  level_game_screen.h
src/core/game_states/: game_over_game_state.cpp  game_over_game_state.h  level_game_state.cpp  level_game_state.h
src/core/gameplay/: boulder_spike.cpp  boulder_spike.h  camera.cpp  camera.h  cell.cpp  cell.h  cell_field.cpp  cell_field.h  direction.cpp  direction.h  player.cpp  player.h  tile.cpp  tile.h  tile_field.cpp  tile_field.h  unit.cpp  unit.h
src/ecs/: components_view.h  entity.cpp  entity.h  pool.h  registry.h
src/events/: event.h  event_handler.h  event_pump.cpp  event_pump.h
src/game/: game.cpp  game.h  game_state.cpp  game_state.h  game_state_machine.cpp  game_state_machine.h
src/game/field/: tile.cpp  tile.h  tile_field.cpp  tile_field.h
src/game/states/: game_over.cpp  game_over.h  level.cpp  level.h
src/game/systems/: damage_system.cpp  damage_system.h  despawn_system.cpp  despawn_system.h  movement_system.cpp  movement_system.h  path_system.cpp  path_system.h  patrol_system.cpp  patrol_system.h  visual_system.cpp  visual_system.h
src/graphics/: bitmap.cpp  bitmap.h  bitmap_loader.cpp  bitmap_loader.h
src/input/: keyboard_key.h  mouse_button.h
src/launcher/: main.cpp  main.h  main_linux.cpp  main_win32.cpp
src/math/: rect.h  vec2.cpp  vec2.h
src/rendering/: camera.cpp  camera.h  canvas.cpp  canvas.h  rendering_backend.cpp  rendering_backend.h  texture.cpp  texture.h
src/resources/: texture_manager.cpp  texture_manager.h
src/utils/: generic_handle.h  raii_guard.h
